--- a/02_Module/17/package.json
+++ b/02_Module/17/package.json
@@ -12,6 +12,8 @@
     "author": "",
     "license": "ISC",
     "devDependencies": {
+        "@babel/core": "^7.22.5",
+        "@babel/preset-typescript": "^7.22.5",
         "@svgr/webpack": "^8.0.1",
         "@types/i18next": "^13.0.0",
         "@types/node": "^20.2.3",
@@ -19,6 +21,8 @@
         "@types/react-dom": "^18.2.4",
         "@types/webpack": "^5.28.1",
         "@types/webpack-dev-server": "^4.7.2",
+        "babel-loader": "^9.1.2",
+        "babel-plugin-i18next-extract": "^0.9.0",
         "css-loader": "^6.8.1",
         "file-loader": "^6.2.0",
         "html-webpack-plugin": "^5.5.1",
