--- a/02_Module/20/package.json
+++ b/02_Module/20/package.json
@@ -6,26 +6,32 @@
     "scripts": {
         "start": "webpack serve --env port:3000",
         "build:prod": "webpack --env mode=production",
-        "build:dev": "webpack --env mode=development"
+        "build:dev": "webpack --env mode=development",
+        "unit": "jest --config ./config/jest/jest.config.ts"
     },
     "keywords": [],
     "author": "",
     "license": "ISC",
     "devDependencies": {
         "@babel/core": "^7.22.5",
+        "@babel/preset-env": "^7.22.5",
         "@babel/preset-typescript": "^7.22.5",
         "@svgr/webpack": "^8.0.1",
         "@types/i18next": "^13.0.0",
+        "@types/jest": "^29.5.2",
         "@types/node": "^20.2.3",
         "@types/react": "^18.2.7",
         "@types/react-dom": "^18.2.4",
         "@types/webpack": "^5.28.1",
         "@types/webpack-dev-server": "^4.7.2",
+        "babel-jest": "^29.5.0",
         "babel-loader": "^9.1.2",
         "babel-plugin-i18next-extract": "^0.9.0",
         "css-loader": "^6.8.1",
         "file-loader": "^6.2.0",
         "html-webpack-plugin": "^5.5.1",
+        "jest": "^29.5.0",
+        "jest-environment-jsdom": "^29.5.0",
         "mini-css-extract-plugin": "^2.7.6",
         "sass": "^1.62.1",
         "sass-loader": "^13.3.1",
