--- a/03_Module/27/package.json
+++ b/03_Module/27/package.json
@@ -7,7 +7,7 @@
     "start": "webpack serve --env port:3000",
     "build:prod": "webpack --env mode=production",
     "build:dev": "webpack --env mode=development",
-    "unit": "jest --config ./config/jest/jest.config.ts",
+    "test:unit": "jest --config ./config/jest/jest.config.ts",
     "storybook": "storybook dev -p 6006 -c config/storybook",
     "storybook:build": "storybook build -c config/storybook"
   },
