--- a/03_Module/27/.github/workflows/github-actions.yml
+++ b/03_Module/27/.github/workflows/github-actions.yml
@@ -15,7 +15,7 @@ jobs:
     steps:
         - uses: actions/checkout@v2
         - name: Starting Node.js ${{ matrix.node-version }}
-            uses: action/setup-node@v1
+            uses: actions/setup-node@v1
             with:
                 node-version: ${{ matrix.node-version }}
         - name: instal modules
@@ -24,4 +24,3 @@ jobs:
           run: npm run build:prod
         - name: run tests
           run: npm run test:unit
-          
