--- a/03_Module/27/.github/workflows/github-actions.yml
+++ b/03_Module/27/.github/workflows/github-actions.yml
@@ -1,26 +1,30 @@
-name: testing and building
-run-name: ${{ github.actor }} is testing out GitHub Actions 🚀
-on: 
-    push:
-        branches: [ master ]
-    pull_request: 
-        branches: [ master ]
+name: Building And Testing
+on:
+  push:
+    branches: [master]
+  pull_request:
+    branches: [master]
 jobs:
   pipeline:
     runs-on: ubuntu-latest
     strategy:
-        matrix:
-            node-version: [17.x]
+      matrix:
+        node-version: [18.x]
 
     steps:
-        - uses: actions/checkout@v2
-        - name: Starting Node.js ${{ matrix.node-version }}
-            uses: actions/setup-node@v1
-            with:
-                node-version: ${{ matrix.node-version }}
-        - name: instal modules
-          run: npm install
-        - name: build production project
-          run: npm run build:prod
-        - name: run tests
-          run: npm run test:unit
+      - uses: actions/checkout@v2
+      - name: Starting Node.js ${{ matrix.node-version }}
+        uses: actions/setup-node@v1
+        with:
+          node-version: ${{ matrix.node-version }}
+      - name: Install modules
+        run: npm install
+      - name: Build production project
+        run: npm run build:prod
+        if: always()
+      - name: Unit testing
+        run: npm run test:unit
+        if: always()
+      - name: Build storybook
+        run: npm run storybook:build
+        if: always()
