--- a/package.json
+++ b/package.json
@@ -5,11 +5,11 @@
   "main": "index.js",
   "scripts": {
     "start": "webpack serve --env port:3000",
-    "build:prod": "webpack --env mode=production --prefix 03_Module/27",
+    "build:prod": "webpack --env mode=production",
     "build:dev": "webpack --env mode=development",
-    "test:unit": "jest --config ./config/jest/jest.config.ts --prefix 03_Module/27",
+    "test:unit": "jest --config ./config/jest/jest.config.ts",
     "storybook": "storybook dev -p 6006 -c config/storybook",
-    "storybook:build": "storybook build -c config/storybook --prefix 03_Module/27"
+    "storybook:build": "storybook build -c config/storybook"
   },
   "keywords": [],
   "author": "",
